objects/Course__c.object
<CustomObject>
    <label>Course</label>
    <nameField>
        <label>Course Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Faculity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Faculity</label>
        <referenceTo>Faculity__c</referenceTo>
        <relationshipLabel>courses</relationshipLabel>
        <relationshipName>courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Batch_Count__c</fullName>
        <label>Batch Count</label>
        <summaryForeignKey>Batch__c.Batch_in_Course__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Duration_days__c</fullName>
        <label>Duration days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Course_Fees_Amount__c</fullName>
        <label>Course Fees Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
</CustomObject>